--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <form id="survey-form" action="envoi.php" method="post">
 
                     Nom :
-                    <input type="text" id="name-label" name="nom" placeholder="xxxxxx" autocomplete="given-name"
+                    <input type="text" id="name-label" name="nom" placeholder="John Smith" autocomplete="given-name"
                         required><br>
                     Email :
-                    <input type="email" id="email-label" name="email" placeholder="xxxxxx@gmail.com"
+                    <input type="email" id="email-label" name="email" placeholder="JohnSmith@gmail.com"
                         autocomplete="given-name" required>
                     <br>
-                    Service demandé :
+                    Service demandé
                     <select name="service">
                         <option value="mediation">Médiation</option>
                         <option value="arbitrage">Arbitrage</option>
@@ -70,6 +70,8 @@
 
         </div>
     </nav>
+
+
     <div class="section_one">
 
 
