--- a/services.html
+++ b/services.html
@@ -71,9 +71,11 @@
         </div>
     </nav>
 
+
+
     <div id="toc_container">
         <div class="toc_title">
-            <p>Table des matières </p>
+            <p>Sommaire </p>
             <i class="fa-solid fa-bars"></i>
         </div>
 
